Video editor: Anim de-sync when pushing a strip onto another #72831

Closed
opened 2020-01-01 11:08:24 +01:00 by Carlos Lopez · 8 comments

System Information
Operating system: Linux Mint 17.3

Blender Version
Broken: 2.81 a

Short description of error
Video editor: Pushing a strip to another (in order to place together) for a while moves the animation keys of other linked ones

Exact steps for others to reproduce the error
Create a strip A in the video editor
Then another B, for example: B is an image
Create a "Transform" strip C for B, and animate it. The image moves, it works.
Then move the B strip (C follows B) and push it to A: you want to locate it next to A, to the right. It becomes red as you do. You can be seeing the animation curve as doing. Look: as you push left, it goes farther more and more.
Now strips B and C are at the desired place, both animation curve (C's) has been moving as you pushed, and it's out of time.

**System Information** Operating system: Linux Mint 17.3 **Blender Version** Broken: 2.81 a **Short description of error** Video editor: Pushing a strip to another (in order to place together) for a while moves the animation keys of other linked ones **Exact steps for others to reproduce the error** Create a strip A in the video editor Then another B, for example: B is an image Create a "Transform" strip C for B, and animate it. The image moves, it works. Then move the B strip (C follows B) and push it to A: you want to locate it next to A, to the right. It becomes red as you do. You can be seeing the animation curve as doing. Look: as you push left, it goes farther more and more. Now strips B and C are at the desired place, both animation curve (C's) has been moving as you pushed, and it's out of time.
Author

Added subscriber: @klopes-4

Added subscriber: @klopes-4

#79063 was marked as duplicate of this issue

#79063 was marked as duplicate of this issue
Eitan Traurig self-assigned this 2020-01-01 20:46:23 +01:00
Eitan Traurig removed their assignment 2020-01-01 20:46:38 +01:00
Member

Added subscriber: @EitanSomething

Added subscriber: @EitanSomething

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @399, @iss

Added subscribers: @399, @iss

Removed subscriber: @399

Removed subscriber: @399

This issue was referenced by 20ba130315

This issue was referenced by 20ba130315f3308907df463bb0a5d2676410921f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-06-14 22:14:40 +02:00
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:47 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72831
No description provided.